<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_four_text">Box Four</string>
    <string name="box_five_text">Box Five</string>
    <string name="green">GREEN</string>
    <string name="yellow">YELLOW</string>
    <string name="red">RED</string>
    <string name="name_default">DEFAULT</string>
</resources>